# 10_clientapps

./: .gitignore  Cargo.toml  README.md  cliff.toml  deny.toml
hackernews/: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
hackernews/assets/: main.css
hackernews/htmls/: main.html  story_item.html
hackernews/src/: api.rs  lib.rs  main.rs
hackernews/src/ui/: mod.rs  store_comment.rs  stories.rs  story_item.rs
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
